--- a/MyerSplash/View/Uc/DrawerControl.xaml
+++ b/MyerSplash/View/Uc/DrawerControl.xaml
@@ -3,17 +3,18 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:attach="using:JP.Utils.Framework"
+    xmlns:c="using:MyerSplashCustomControl.Control"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:data="using:MyerSplash.Data"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="700"
     d:DesignWidth="300"
     mc:Ignorable="d">
-    <Grid x:Name="RootGrid" Background="{StaticResource AppBackgroundBrush}">
-        <Grid.RowDefinitions>
+    <c:AcrylicCompatGrid x:Name="RootGrid">
+        <c:AcrylicCompatGrid.RowDefinitions>
             <RowDefinition Height="120" />
             <RowDefinition />
-        </Grid.RowDefinitions>
+        </c:AcrylicCompatGrid.RowDefinitions>
         <Grid x:Name="BlurBackground" Grid.RowSpan="2" />
         <Grid Margin="0,0,0,0">
             <StackPanel Margin="0,0,0,12" Orientation="Horizontal">
@@ -82,7 +83,7 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </ScrollViewer>
-            <Grid VerticalAlignment="Bottom" Grid.Row="1">
+            <Grid Grid.Row="1" VerticalAlignment="Bottom">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
@@ -143,5 +144,5 @@
                 </Button>
             </Grid>
         </Grid>
-    </Grid>
+    </c:AcrylicCompatGrid>
 </UserControl>
