--- a/MyerSplash/View/Uc/AboutControl.xaml
+++ b/MyerSplash/View/Uc/AboutControl.xaml
@@ -2,13 +2,14 @@
     x:Class="MyerSplash.View.Uc.AboutControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:c="using:MyerSplashCustomControl.Control"
     xmlns:common="using:MyerSplash.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="700"
     d:DesignWidth="400"
     mc:Ignorable="d">
-    <Grid x:Name="RootGrid" Background="{StaticResource AppBackgroundBrushDark}">
+    <c:AcrylicCompatGrid x:Name="RootGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
             <RowDefinition />
@@ -144,5 +145,5 @@
                 </StackPanel>
             </ScrollViewer>
         </Grid>
-    </Grid>
+    </c:AcrylicCompatGrid>
 </common:NavigableUserControl>
