--- a/MyerSplash/View/Uc/SearchBarControl.xaml
+++ b/MyerSplash/View/Uc/SearchBarControl.xaml
@@ -3,17 +3,17 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:attach="using:JP.Utils.Framework"
+    xmlns:c="using:MyerSplashCustomControl.Control"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="800"
     d:DesignWidth="500"
     mc:Ignorable="d">
     <Grid>
-        <Border
+        <c:AcrylicCompatGrid
             x:Name="MaskBorder"
             Grid.RowSpan="2"
-            attach:UIElementTapCommand.ItemTapCommand="{x:Bind MainVM.HideSearchCommand, Mode=OneWay}"
-            Background="{StaticResource AppBackgroundBrushDark}" />
+            attach:UIElementTapCommand.ItemTapCommand="{x:Bind MainVM.HideSearchCommand, Mode=OneWay}" />
         <Grid
             x:Name="ContentGrid"
             Margin="0,0,0,200"
