--- a/MyerSplash/View/Uc/SettingsControl.xaml
+++ b/MyerSplash/View/Uc/SettingsControl.xaml
@@ -2,7 +2,7 @@
     x:Class="MyerSplash.View.Uc.SettingsControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:backdrop="using:MyerSplash.Common.Brush"
+    xmlns:c="using:MyerSplashCustomControl.Control"
     xmlns:common="using:MyerSplash.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:framework="using:JP.Utils.Framework"
@@ -23,7 +23,7 @@
             <Setter Property="HorizontalAlignment" Value="Stretch" />
         </Style>
     </UserControl.Resources>
-    <Grid Background="{StaticResource AppBackgroundBrushDark}">
+    <c:AcrylicCompatGrid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
             <RowDefinition />
@@ -189,5 +189,5 @@
                 </StackPanel>
             </ScrollViewer>
         </Grid>
-    </Grid>
+    </c:AcrylicCompatGrid>
 </common:NavigableUserControl>
