--- a/MyerSplash/ResourceDictionary/StyleDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/StyleDictionary.xaml
@@ -1,4 +1,7 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:c="using:MyerSplashCustomControl.Control">
     <FontFamily x:Key="PhoneFontFamilyNormal">Segoe WP</FontFamily>
     <FontWeight x:Key="PhoneButtonFontWeight">Semibold</FontWeight>
     <SolidColorBrush x:Key="ButtonDisabledBackgroundThemeBrush" Color="Transparent" />
@@ -270,7 +273,7 @@
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}">
-                        <Grid x:Name="InnerGrid" Background="Transparent">
+                        <c:MaterialCompatGrid LightEnabled="False" x:Name="InnerGrid" Background="Transparent">
                             <Rectangle
                                 x:Name="PressedBackground"
                                 Fill="#B2000000"
@@ -300,10 +303,11 @@
                             <Border
                                 x:Name="SelectedBorder"
                                 Width="8"
-                                CornerRadius="2"
+                                Margin="12"
                                 HorizontalAlignment="Left"
-                                Background="{StaticResource MyerSplashThemeColorBrush}" Margin="12" />
-                        </Grid>
+                                Background="{StaticResource MyerSplashThemeColorBrush}"
+                                CornerRadius="2" />
+                        </c:MaterialCompatGrid>
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
                                 <VisualStateGroup.Transitions>
@@ -559,7 +563,6 @@
                                             Storyboard.TargetProperty="(ContentPresenter.Background).(SolidColorBrush.Color)"
                                             To="{StaticResource ListButtonPointOver}"
                                             Duration="0:0:0.1" />
-
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
