Add a setting option to disable today's recommendation

--- a/MyerSplash/View/Uc/SettingsControl.xaml
+++ b/MyerSplash/View/Uc/SettingsControl.xaml
@@ -93,6 +93,24 @@
                             IsOn="{Binding Source={StaticResource AppSettings}, Path=EnableScaleAnimation, Mode=TwoWay}"
                             Style="{StaticResource ToggleSwitchStyle}" />
                     </Grid>
+                    <Grid
+                        Height="48"
+                        Margin="0"
+                        framework:UIElementTapCommand.ItemTapCommand="{x:Bind SettingsVM.ToggleScaleAnimationCommand, Mode=OneWay}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock
+                            Margin="12,0,0,0"
+                            VerticalAlignment="Center"
+                            Foreground="White"
+                            Text="Enable today's recommendation" />
+                        <ToggleSwitch
+                            Grid.Column="1"
+                            IsOn="{Binding Source={StaticResource AppSettings}, Path=EnableTodayRecommendation, Mode=TwoWay}"
+                            Style="{StaticResource ToggleSwitchStyle}" />
+                    </Grid>
                     <Button
                         Margin="12"
                         HorizontalAlignment="Stretch"
