Apply the "real" acrylic in fcu

--- a/MyerSplash/App.xaml
+++ b/MyerSplash/App.xaml
@@ -5,7 +5,7 @@
     xmlns:common="using:MyerSplash.Common"
     xmlns:local="using:MyerSplash"
     xmlns:vm="using:MyerSplash.ViewModel"
-    RequestedTheme="Light">
+    RequestedTheme="Dark">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
