--- a/MyerSplash/ResourceDictionary/BrushDictionary.xaml
+++ b/MyerSplash/ResourceDictionary/BrushDictionary.xaml
@@ -1,7 +1,15 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:backdrop="using:MyerSplash.Common.Brush">
+    xmlns:backdrop="using:MyerSplash.Common.Brush"
+    xmlns:fcu="using:Windows.UI.Xaml.Media?IsApiContractPresent(Windows.Foundation.UniversalApiContract, 5)"
+    xmlns:media="using:Windows.UI.Xaml.Media">
+    <fcu:AcrylicBrush
+        x:Key="CustomAcrylicInAppBrush"
+        BackgroundSource="Backdrop"
+        FallbackColor="Black"
+        TintColor="Black"
+        TintOpacity="0.8" />
     <backdrop:AcrylicBrush
         x:Key="AppBackgroundBrush"
         BackdropFactor="0.5"
