--- a/MyerSplash/View/Uc/AboutControl.xaml
+++ b/MyerSplash/View/Uc/AboutControl.xaml
@@ -3,12 +3,17 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:common="using:MyerSplash.Common"
+    xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="700"
     d:DesignWidth="400"
     mc:Ignorable="d">
-    <Grid x:Name="RootGrid" Background="{StaticResource AppBackgroundBrushDark}">
+    <Grid
+        x:Name="RootGrid"
+        cu:Background="{StaticResource AppBackgroundBrushDark}"
+        fcu:Background="{StaticResource CustomAcrylicInAppBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
             <RowDefinition />
