--- a/MyerSplash/View/Uc/DrawerControl.xaml
+++ b/MyerSplash/View/Uc/DrawerControl.xaml
@@ -3,13 +3,18 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:attach="using:JP.Utils.Framework"
+    xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:data="using:MyerSplash.Data"
+    xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="700"
     d:DesignWidth="300"
     mc:Ignorable="d">
-    <Grid x:Name="RootGrid" Background="{StaticResource AppBackgroundBrush}">
+    <Grid
+        x:Name="RootGrid"
+        cu:Background="{StaticResource AppBackgroundBrush}"
+        fcu:Background="{StaticResource CustomAcrylicInAppBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="120" />
             <RowDefinition />
@@ -82,7 +87,7 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </ScrollViewer>
-            <Grid VerticalAlignment="Bottom" Grid.Row="1">
+            <Grid Grid.Row="1" VerticalAlignment="Bottom">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
