--- a/MyerSplash/View/Uc/SearchBarControl.xaml
+++ b/MyerSplash/View/Uc/SearchBarControl.xaml
@@ -3,7 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:attach="using:JP.Utils.Framework"
+    xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="800"
     d:DesignWidth="500"
@@ -13,7 +15,8 @@
             x:Name="MaskBorder"
             Grid.RowSpan="2"
             attach:UIElementTapCommand.ItemTapCommand="{x:Bind MainVM.HideSearchCommand, Mode=OneWay}"
-            Background="{StaticResource AppBackgroundBrushDark}" />
+            cu:Background="{StaticResource AppBackgroundBrush}"
+            fcu:Background="{StaticResource CustomAcrylicInAppBrush}" />
         <Grid
             x:Name="ContentGrid"
             Margin="0,0,0,200"
