--- a/MyerSplash/View/Page/MainPage.xaml
+++ b/MyerSplash/View/Page/MainPage.xaml
@@ -21,9 +21,10 @@
             <attach:InvokeCommandByKeyDown Command="{x:Bind MainVM.SearchCommand}" PressedKey="F6" />
         </Core:EventTriggerBehavior>
     </Interactivity:Interaction.Behaviors>
-    <Grid x:Name="RootGrid" Background="Black">
+    <Grid x:Name="RootGrid" cu:Background="{StaticResource CustomAcrylicWindowBrush}"
+          fcu:Background="{StaticResource SystemControlChromeLowAcrylicWindowBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="100" />
+            <RowDefinition Height="90" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <uc:NoNetworkControl
@@ -51,126 +52,184 @@
                 Style="{StaticResource FabStyle}">
                 <Grid Width="60" Height="60">
                     <cc:EllipseShadowControl
-                        Width="50"
-                        Height="50"
-                        ForeColor="{StaticResource MyerSplashThemeColor}"
-                        Radius="23" />
-                    <Grid>
-                        <SymbolIcon
-                            x:Name="RefreshIcon"
-                            Foreground="White"
-                            Symbol="Refresh" />
-                    </Grid>
+                        Width="46"
+                        Height="46"
+                        ForeColor="White"
+                        Radius="21" />
+                    <FontIcon FontFamily="Segoe MDL2 Assets" 
+                              Foreground="#FF333333"
+                              Glyph="&#xE8EE;" />
                 </Grid>
             </Button>
         </Grid>
-        <Grid x:Name="TitleGrid" Background="Transparent" />
-        <Grid
-            x:Name="TitleStack"
-            Margin="16"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="60" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="60" />
-                <ColumnDefinition x:Name="C3" Width="60" />
-            </Grid.ColumnDefinitions>
-            <Border
-                x:Name="BlurBorder"
-                Grid.ColumnSpan="5"
-                cu:Background="{StaticResource AppBackgroundBrushLittleDark}"
-                fcu:Background="{StaticResource CustomAcrylicInAppBrush}" />
-            <Border x:Name="HamBtnBorder" VerticalAlignment="Center">
-                <uc:HamburgerButton
-                    x:Name="HamBtn"
-                    Width="{StaticResource PosterHeight}"
-                    Height="{StaticResource PosterHeight}"
+        <Grid x:Name="DummyTitleBar" Background="Transparent"/>
+        <Grid x:Name="TitleGridContent"
+              cu:Background="{StaticResource CustomAcrylicWindowBrush}"
+              fcu:Background="{StaticResource SystemControlChromeLowAcrylicWindowBrush}" Padding="0,30,0,0">
+            <uc:MainNavigationControl 
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Center"
+                Margin="12,0,0,0" Height="28"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0">
+                <Button
+                    x:Name="SearchBtn"
+                    Grid.Column="2"
+                    Width="{StaticResource MainButtonSize}"
+                    Height="{StaticResource MainButtonSize}"
                     Margin="0"
                     HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    Command="{x:Bind MainVM.OpenDrawerCommand, Mode=OneWay}" />
-            </Border>
-            <Button
-                x:Name="TitleBtn"
-                Grid.Column="1"
-                Height="{StaticResource PosterHeight}"
-                Margin="0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                BorderThickness="0"
-                Style="{StaticResource ListButtonStyle}"
-                Tapped="StackPanel_Tapped">
-                <TextBlock
-                    x:Name="TitleTB"
-                    Margin="12,4"
+                    VerticalAlignment="Center"
+                    BorderThickness="0"
+                    Command="{x:Bind MainVM.SearchCommand, Mode=OneWay}"
+                    Style="{StaticResource ListButtonStyle}">
+                    <FontIcon
+                        FontFamily="Segoe MDL2 Assets"
+                        Foreground="{StaticResource MainBarIconColorBrush}"
+                        Glyph="&#xE094;"
+                        FontSize="{StaticResource MediumFontSize}"
+                        RenderTransformOrigin="0.5,0.5">
+                        <FontIcon.RenderTransform>
+                            <CompositeTransform ScaleX="-1" />
+                        </FontIcon.RenderTransform>
+                    </FontIcon>
+                </Button>
+                <Button
+                    x:Name="DownloadEntryBtn"
+                    Grid.Column="3"
+                    Width="{StaticResource MainButtonSize}"
+                    Height="{StaticResource MainButtonSize}"
+                    Margin="0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    CacheMode="BitmapCache"
-                    FontSize="25"
-                    FontWeight="Bold"
-                    Foreground="White"
-                    Tapped="StackPanel_Tapped"
-                    Text="{x:Bind MainVM.SelectedTitle, Mode=OneWay, FallbackValue=#NEW}"
-                    TextTrimming="CharacterEllipsis" />
-            </Button>
-            <Button
-                x:Name="SearchBtn"
-                Grid.Column="2"
-                Width="{StaticResource PosterHeight}"
-                Height="{StaticResource PosterHeight}"
-                Margin="0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
-                BorderThickness="0"
-                Command="{x:Bind MainVM.SearchCommand, Mode=OneWay}"
-                Style="{StaticResource ListButtonStyle}">
-                <FontIcon
-                    FontFamily="Segoe MDL2 Assets"
-                    Foreground="{StaticResource MainBarIconColorBrush}"
-                    Glyph="&#xE094;"
-                    RenderTransformOrigin="0.5,0.5">
-                    <FontIcon.RenderTransform>
-                        <CompositeTransform ScaleX="-1" />
-                    </FontIcon.RenderTransform>
-                </FontIcon>
-            </Button>
-            <Button
-                x:Name="DownloadEntryBtn"
-                Grid.Column="3"
-                Width="{StaticResource PosterHeight}"
-                Height="{StaticResource PosterHeight}"
-                Margin="0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
-                BorderThickness="0"
-                Command="{x:Bind MainVM.ShowDownloadsCommand, Mode=OneWay}"
-                Style="{StaticResource ListButtonStyle}">
-                <FontIcon
-                    FontFamily="Segoe MDL2 Assets"
-                    Foreground="{StaticResource MainBarIconColorBrush}"
-                    Glyph="&#xE118;" />
-            </Button>
+                    BorderThickness="0"
+                    Command="{x:Bind MainVM.ShowDownloadsCommand, Mode=OneWay}"
+                    Style="{StaticResource ListButtonStyle}">
+                    <FontIcon
+                        FontFamily="Segoe MDL2 Assets"
+                        Foreground="{StaticResource MainBarIconColorBrush}"
+                        Glyph="&#xE118;"
+                        FontSize="{StaticResource MediumFontSize}"/>
+                </Button>
+                <Button
+                    x:Name="MoreBtn"
+                    Grid.Column="3"
+                    Width="{StaticResource MainButtonSize}"
+                    Height="{StaticResource MainButtonSize}"
+                    Margin="0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    BorderThickness="0"
+                    RequestedTheme="Dark"
+                    Style="{StaticResource ListButtonStyle}">
+                    <FontIcon
+                        FontFamily="Segoe MDL2 Assets"
+                        FontSize="{StaticResource MediumFontSize}"
+                        Foreground="{StaticResource MainBarIconColorBrush}"
+                        Glyph="" />
+                    <Button.Flyout>
+                        <MenuFlyout Placement="Left">
+                            <MenuFlyoutItem Text="Settings" Command="{x:Bind MainVM.GoToSettingsCommand, Mode=OneWay}"/>
+                            <MenuFlyoutItem Text="About" Command="{x:Bind MainVM.GoToAboutCommand, Mode=OneWay}"/>
+                        </MenuFlyout>
+                    </Button.Flyout>
+                    <!--<Button.ContextFlyout>
+                        
+                    </Button.ContextFlyout>-->
+                </Button>
+            </StackPanel>
+            <!--<Grid
+                 x:Name="TitleStack"
+                 Margin="16"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top">
+                 <Grid.ColumnDefinitions>
+                 <ColumnDefinition Width="60" />
+                 <ColumnDefinition Width="Auto" />
+                 <ColumnDefinition Width="60" />
+                 <ColumnDefinition x:Name="C3" Width="60" />
+                 </Grid.ColumnDefinitions>
+                 <Border
+                 x:Name="BlurBorder"
+                 Grid.ColumnSpan="5"
+                 cu:Background="{StaticResource AppBackgroundBrushLittleDark}"
+                 fcu:Background="{StaticResource CustomAcrylicInAppBrush}" />
+                 <Border x:Name="HamBtnBorder" VerticalAlignment="Center">
+                 <uc:HamburgerButton
+                 x:Name="HamBtn"
+                 Width="{StaticResource PosterHeight}"
+                 Height="{StaticResource PosterHeight}"
+                 Margin="0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 Command="{x:Bind MainVM.OpenDrawerCommand, Mode=OneWay}" />
+                 </Border>
+                 <Button
+                 x:Name="TitleBtn"
+                 Grid.Column="1"
+                 Height="{StaticResource PosterHeight}"
+                 Margin="0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Top"
+                 BorderThickness="0"
+                 Style="{StaticResource ListButtonStyle}"
+                 Tapped="StackPanel_Tapped">
+                 <TextBlock
+                 x:Name="TitleTB"
+                 Margin="12,4"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Center"
+                 CacheMode="BitmapCache"
+                 FontSize="25"
+                 FontWeight="Bold"
+                 Foreground="White"
+                 Tapped="StackPanel_Tapped"
+                 Text="{x:Bind MainVM.SelectedTitle, Mode=OneWay, FallbackValue=#NEW}"
+                 TextTrimming="CharacterEllipsis" />
+                 </Button>
+                 <Button
+                 x:Name="SearchBtn"
+                 Grid.Column="2"
+                 Width="{StaticResource PosterHeight}"
+                 Height="{StaticResource PosterHeight}"
+                 Margin="0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Center"
+                 BorderThickness="0"
+                 Command="{x:Bind MainVM.SearchCommand, Mode=OneWay}"
+                 Style="{StaticResource ListButtonStyle}">
+                 <FontIcon
+                 FontFamily="Segoe MDL2 Assets"
+                 Foreground="{StaticResource MainBarIconColorBrush}"
+                 Glyph="&#xE094;"
+                 RenderTransformOrigin="0.5,0.5">
+                 <FontIcon.RenderTransform>
+                 <CompositeTransform ScaleX="-1" />
+                 </FontIcon.RenderTransform>
+                 </FontIcon>
+                 </Button>
+                 <Button
+                 x:Name="DownloadEntryBtn"
+                 Grid.Column="3"
+                 Width="{StaticResource PosterHeight}"
+                 Height="{StaticResource PosterHeight}"
+                 Margin="0"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Center"
+                 BorderThickness="0"
+                 Command="{x:Bind MainVM.ShowDownloadsCommand, Mode=OneWay}"
+                 Style="{StaticResource ListButtonStyle}">
+                 <FontIcon
+                 FontFamily="Segoe MDL2 Assets"
+                 Foreground="{StaticResource MainBarIconColorBrush}"
+                 Glyph="&#xE118;" />
+                 </Button>
+                 </Grid>-->
         </Grid>
         <uc:PhotoDetailControl
             x:Name="DetailControl"
             Grid.RowSpan="2"
             d:IsHidden="True"
-            OnHidden="DetailControl_OnHidden"
             Visibility="Collapsed" />
-        <Border
-            x:Name="DrawerMaskBorder"
-            Grid.RowSpan="2"
-            attach:UIElementTapCommand.ItemTapCommand="{x:Bind MainVM.OpenDrawerCommand, Mode=OneWay}"
-            d:IsHidden="True"
-            Background="Black" />
-        <uc:DrawerControl
-            x:Name="DrawerControl"
-            Grid.RowSpan="2"
-            Width="280"
-            HorizontalAlignment="Left"
-            d:IsHidden="True"
-            DataContext="{x:Bind MainVM, Mode=OneWay}" />
         <uc:SearchBarControl
             x:Name="SearchControl"
             Grid.RowSpan="2"
